[gd_scene load_steps=15 format=3 uid="uid://dchw2tg4juqnw"]

[ext_resource type="PackedScene" uid="uid://xjt5ucf5m4x7" path="res://scenes/tab.tscn" id="1_3sr0o"]
[ext_resource type="Script" path="res://scripts/bottom_toolbar.gd" id="1_et7sx"]
[ext_resource type="Script" path="res://scripts/populate_my_comics.gd" id="5_8k4yo"]
[ext_resource type="Texture2D" uid="uid://bjr2g5le6q882" path="res://assets/sprites/search_grey.png" id="5_w8dkv"]
[ext_resource type="Texture2D" uid="uid://byjpq87ja0td2" path="res://assets/sprites/search_orange.png" id="6_a2uta"]
[ext_resource type="PackedScene" uid="uid://ddm07dmqmtcc1" path="res://scenes/test_comic_row_prefab.tscn" id="7_43mfh"]
[ext_resource type="Texture2D" uid="uid://cb6g04a1aeei6" path="res://assets/sprites/settings_grey.png" id="7_rfvfi"]
[ext_resource type="Texture2D" uid="uid://dg0icgvg2heru" path="res://assets/sprites/settings_orange.png" id="8_bqc0n"]
[ext_resource type="Script" path="res://scripts/search_discover.gd" id="10_o2oin"]

[sub_resource type="ButtonGroup" id="ButtonGroup_yx4v1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4vb3"]
size = Vector2(200, 250)

[sub_resource type="ButtonGroup" id="ButtonGroup_sf2t0"]

[sub_resource type="ButtonGroup" id="ButtonGroup_vuxl5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4javi"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColors" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background Color" type="ColorRect" parent="BackgroundColors"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="ColorRect" type="ColorRect" parent="BackgroundColors"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -254.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.00392157, 0.0156863, 0.0352941, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 60

[node name="BottomToolbar" type="Control" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("1_et7sx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BottomToolbar"]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -159.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="MyComicsButton" parent="MarginContainer/BottomToolbar/HBoxContainer" instance=ExtResource("1_3sr0o")]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_yx4v1")

[node name="RichTextLabel" parent="MarginContainer/BottomToolbar/HBoxContainer/MyComicsButton" index="0"]
offset_left = -37.0
offset_right = 34.0

[node name="my_comic_touch" type="TouchScreenButton" parent="MarginContainer/BottomToolbar/HBoxContainer/MyComicsButton" groups=["touch_screen_button"]]
position = Vector2(51, 93)
shape = SubResource("RectangleShape2D_y4vb3")

[node name="DiscoverButton" parent="MarginContainer/BottomToolbar/HBoxContainer" instance=ExtResource("1_3sr0o")]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_sf2t0")
texture_normal = ExtResource("5_w8dkv")
texture_pressed = ExtResource("6_a2uta")

[node name="RichTextLabel" parent="MarginContainer/BottomToolbar/HBoxContainer/DiscoverButton" index="0"]
offset_left = -18.0
offset_right = 53.0
text = "[b]Discover[/b]"

[node name="discover_touch" type="TouchScreenButton" parent="MarginContainer/BottomToolbar/HBoxContainer/DiscoverButton" groups=["touch_screen_button"]]
position = Vector2(50, 93)
shape = SubResource("RectangleShape2D_y4vb3")

[node name="SettingsButton" parent="MarginContainer/BottomToolbar/HBoxContainer" instance=ExtResource("1_3sr0o")]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_vuxl5")
texture_normal = ExtResource("7_rfvfi")
texture_pressed = ExtResource("8_bqc0n")

[node name="RichTextLabel" parent="MarginContainer/BottomToolbar/HBoxContainer/SettingsButton" index="0"]
offset_left = -9.0
offset_right = 62.0
text = "[b]Settings[/b]"

[node name="settings_touch" type="TouchScreenButton" parent="MarginContainer/BottomToolbar/HBoxContainer/SettingsButton" groups=["touch_screen_button"]]
position = Vector2(50, 93)
shape = SubResource("RectangleShape2D_y4vb3")

[node name="MainMiddle" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="MyComics" type="Control" parent="MarginContainer/MainMiddle"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_8k4yo")

[node name="MyComicsHeader" type="Label" parent="MarginContainer/MainMiddle/MyComics"]
layout_mode = 1
offset_left = 60.0
offset_top = 40.0
offset_right = 1088.0
offset_bottom = 143.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 75
text = "My Comics"
text_overrun_behavior = 3

[node name="MyComicsScrollContainer" type="ScrollContainer" parent="MarginContainer/MainMiddle/MyComics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2

[node name="MyComicsVBoxContainer" type="VBoxContainer" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="test_row" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row2" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row3" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row4" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row5" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row6" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row7" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row8" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row9" parent="MarginContainer/MainMiddle/MyComics/MyComicsScrollContainer/MyComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="SelectedComicsScrollContainer" type="ScrollContainer" parent="MarginContainer/MainMiddle/MyComics"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 198.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedComicsVBoxContainer" type="VBoxContainer" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="test_row" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row2" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row3" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row4" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row5" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row6" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row7" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row8" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row9" parent="MarginContainer/MainMiddle/MyComics/SelectedComicsScrollContainer/SelectedComicsVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="Discover" type="Control" parent="MarginContainer/MainMiddle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_o2oin")

[node name="DiscoverHeader" type="Label" parent="MarginContainer/MainMiddle/Discover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 40.0
offset_right = 420.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 75
text = "Discover"

[node name="InputLine" type="LineEdit" parent="MarginContainer/MainMiddle/Discover"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 109.0
offset_top = 201.0
offset_right = 674.0
offset_bottom = 278.0
theme_override_colors/font_placeholder_color = Color(0.498039, 0.498039, 0.498039, 0.498039)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 0
theme_override_font_sizes/font_size = 50
placeholder_text = "URL for New Comics..."

[node name="LoadingImage" type="TextureRect" parent="MarginContainer/MainMiddle/Discover"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -706.0
offset_right = -56.0
offset_bottom = -666.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture = ExtResource("8_bqc0n")
expand_mode = 1

[node name="DiscoverScrollContainer" type="ScrollContainer" parent="MarginContainer/MainMiddle/Discover"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 335.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiscoverVBoxContainer" type="VBoxContainer" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="test_row" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row2" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row3" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row4" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row5" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row6" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row7" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row8" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="test_row9" parent="MarginContainer/MainMiddle/Discover/DiscoverScrollContainer/DiscoverVBoxContainer" instance=ExtResource("7_43mfh")]
layout_mode = 2

[node name="PopupPanel" type="PanelContainer" parent="MarginContainer/MainMiddle/Discover"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 265.0
offset_top = 430.0
offset_right = 965.0
offset_bottom = 880.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4javi")

[node name="PopUpMarginContainer" type="MarginContainer" parent="MarginContainer/MainMiddle/Discover/PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="HeaderLabel" type="Label" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Potential Archive Link Found:"

[node name="LinkButton" type="LinkButton" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "https://testing-comic.com/archive"
underline = 2
uri = "https://xkcd.com/"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="YesButton" type="LinkButton" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "YEPPERS"
underline = 2

[node name="NoButton" type="LinkButton" parent="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "NOPE"
underline = 2

[node name="Settings" type="Control" parent="MarginContainer/MainMiddle"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsHeader" type="Label" parent="MarginContainer/MainMiddle/Settings"]
layout_mode = 2
offset_left = 60.0
offset_top = 40.0
offset_right = 460.0
offset_bottom = 143.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 75
text = "Settings"

[connection signal="text_submitted" from="MarginContainer/MainMiddle/Discover/InputLine" to="MarginContainer/MainMiddle/Discover" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer/HBoxContainer/YesButton" to="MarginContainer/MainMiddle/Discover" method="_on_yes_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainMiddle/Discover/PopupPanel/PopUpMarginContainer/VBoxContainer/HBoxContainer/NoButton" to="MarginContainer/MainMiddle/Discover" method="_on_no_button_pressed"]

[editable path="MarginContainer/BottomToolbar/HBoxContainer/MyComicsButton"]
[editable path="MarginContainer/BottomToolbar/HBoxContainer/DiscoverButton"]
[editable path="MarginContainer/BottomToolbar/HBoxContainer/SettingsButton"]
